add Encounter model

--- a/patientManager/app/views/patients/show.html.erb
+++ b/patientManager/app/views/patients/show.html.erb
@@ -2,11 +2,21 @@
 <p>
   <strong>First Name:</strong>
   <%= @patient.firstName %>
-</p>
 
-<p>
   <strong>Middle Name:</strong>
   <%= @patient.middleName %>
+
+  <strong>Last Name:</strong>
+  <%= @patient.lastName %>
+
+  <strong>Weight:</strong>
+  <%= @patient.weight %>
+
+  <strong>Height:</strong>
+  <%= @patient.Height %>
+
+  <strong>MRN:</strong>
+  <%= @patient.MRN %>
 </p>
 
 
