--- a/patientManager/app/views/patients/index.html.erb
+++ b/patientManager/app/views/patients/index.html.erb
@@ -1,14 +1,16 @@
-<h1>Listing Patients</h1>
-<%= link_to 'New patient', new_patient_path %>
+<h1>List of Patients</h1>
+<%= button_to 'New patient', new_patient_path, method: :get %>
 <table>
   <tr>
+    <th>MRN</th>
     <th>First Name</th>
     <th>Last Name</th>
-    <th colspan="3"></th>
+    <th colspan="3">Actions</th>
   </tr>
 
   <% @patients.each do |patient| %>
     <tr>
+      <td><%= patient.MRN %></td>
       <td><%= patient.firstName %></td>
       <td><%= patient.lastName %></td>
       <td><%= link_to 'Show', patient_path(patient) %></td>
