--- a/patientManager/app/views/patients/show.html.erb
+++ b/patientManager/app/views/patients/show.html.erb
@@ -19,5 +19,73 @@
   <%= @patient.MRN %>
 </p>
 
+<% if false %>
+  todo: find out how to pass in param
+  <%= button_to 'New encounter', new_patient_encounter_path, method: :get %>
+<% end %>
+
+<h2>Add Encounter:</h2>
+<%= form_for([@patient, @patient.encounters.build]) do |f| %>
+  <p>
+    <label>Visit Number:</label>
+    <%= f.text_field :visitNumber %>
+
+    <label>Admitted At:</label>
+    <%= f.date_field :admittedAt%>
+
+    <label>Discharged At:</label>
+    <%= f.date_field :dischargedAt %>
+
+    <label>Location:</label>
+    <%= f.text_field :location %>
+
+    <label>Room:</label>
+    <%= f.text_field :room %>
+
+    <label>Bed:</label>
+    <%= f.text_field :bed %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+
+<h2>Encounters</h2>
+<% @patient.encounters.each do |encounter| %>
+  <p>
+    <strong>Visit Number:</strong>
+    <%= encounter.visitNumber %>
+  </p>
+<% end %>
+
+
+<h2>List of Encounters</h2>
+
+<table>
+  <tr>
+    <th>Visit Number</th>
+    <th>Admitted At</th>
+    <th>Discharged At</th>
+    <th colspan="3">Actions</th>
+  </tr>
+
+  <% @patient.encounters.each do |encounter| %>
+    <tr>
+      <td><%= encounter.visitNumber %></td>
+      <td><%= encounter.admittedAt %></td>
+      <td><%= encounter.dischargedAt %></td>
+      <td><%= encounter.id %></td>
+      <% if false %>
+      <td><%= link_to 'Show', patient_encounter_path(encounter, patient_id: 3) %></td>
+      <td><%= link_to 'Edit', edit_patient_encounter_path(encounter) %></td>
+      <td><%= link_to 'Destroy', patients_encounter_path,
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
+    </tr>
+  <% end %>
+</table>
+
+
 
 <%= button_to 'Back', patients_path, method: :get %>
